# PlanningWithEllipsoidalCorridors

./: CMakeLists.txt  README.md
BallalCorridor/: Ball.h  BallCorridor.h  CMakeLists.txt  GenerateBall.h  GenerateBallCorridor.h
CorridorPlanning/: CMakeLists.txt  CorridorPlanningProblem.h  IterativelySolve.h  TimeVaryingProjectionToBall.h
EllipsoidalCorridor/: CMakeLists.txt  EllipsoidalCorridor.h  EllipsoidalCorridorOptions.h  InflatedEllipsoid.h  LagrangePolynomial.h  SingleEllipsoid.h
EllipsoidalCorridor_old/: EllipsoidalCorridor.h  InflatedBall.h  InflatedEllipsoid.h
PathParameterization/: LagrangePolynomial.h
examples/: CreateCorridors.cc  CreateEllipsoid.cc  GenerateLargeBall.cc  GenerateLargeBallCorridor.cc  PlanDoubleIntegrator.cc  ellipsoid_decomp.py  sample_corridor_trajectories.cc  visualize_corridor.m  visualize_corridor.py  visualize_ellipsoid.m  visualize_ellipsoid.py  visualize_paths.py
examples/Old/: CreateCorridors.cc
examples/helpers/: read_point_cloud.h
examples/result_corridors/: corridor_1.txt  trajectory_1.txt
examples/sample_point_cloud_data/: point_cloud_1.txt  random_point_cloud_generator.py
examples/sample_result_data/: corridor_1.txt  ellipsoid_1.txt  ellipsoid_cloud_1.txt  ellipsoid_corridor_1.txt  path_1.txt  paths_in_1.txt
